# libelas-gpu

./: .gitignore  CMakeLists.txt  ReadMe.md  main_cpu.cpp  main_gpu.cu  main_test.cpp
CPU/: CMakeLists.txt  elas.cpp  elas.h
CPU/src/: descriptor.cpp  elas.cpp
GPU/: elas_gpu.cu  elas_gpu.h
src/: main.cpp  main.cu  main_testing.cpp
